--- a/src/ComplexCommerce/ComplexCommerce.Data.SqlServer/Model/ComplexCommerce.Context.tt
+++ b/src/ComplexCommerce/ComplexCommerce.Data.SqlServer/Model/ComplexCommerce.Context.tt
@@ -29,18 +29,18 @@ CodeRegion region = new CodeRegion(this);
 EntityFrameworkTemplateFileManager fileManager = EntityFrameworkTemplateFileManager.Create(this);
 
 EdmItemCollection ItemCollection = null;
-if ( inputFile == "$edmxInputFile" + "$" )
-{
-	fileManager.Process();
-	return "#error The T4 generation file was added to the project by using Add -> New Item, "
-		+ "but the inputFile string was not changed to the name of the EDMX file. "
-		+ "Open the \".tt\" file, and change the value of \"inputFile\". Use \"Add Code "
-		+ "Generation Item\" in the EDMX context menu to avoid this error in future.";
-}
-else
-{
+//if ( inputFile == "$edmxInputFile" + "$" )
+//{
+//	fileManager.Process();
+//	return "#error The T4 generation file was added to the project by using Add -> New Item, "
+//		+ "but the inputFile string was not changed to the name of the EDMX file. "
+//		+ "Open the \".tt\" file, and change the value of \"inputFile\". Use \"Add Code "
+//		+ "Generation Item\" in the EDMX context menu to avoid this error in future.";
+//}
+//else
+//{
 	ItemCollection = loader.CreateEdmItemCollection(inputFile);
-}
+//}
 string namespaceName = code.VsNamespaceSuggestion();
 
 EntityContainer container = ItemCollection.GetItems<EntityContainer>().FirstOrDefault();
@@ -176,7 +176,6 @@ void WriteObjectContextInterface( EntityContainer container, CodeGenerationTools
     void DeleteObject(object entity);
     void Detach(object entity);
     void DetectChanges();
-    void Dispose();
     int ExecuteFunction(string functionName, params ObjectParameter[] parameters);
     ObjectResult<TElement> ExecuteFunction<TElement>(string functionName, params ObjectParameter[] parameters);
     ObjectResult<TElement> ExecuteFunction<TElement>(string functionName, MergeOption mergeOption, params ObjectParameter[] parameters);
