Created PageRoute custom route to handle localized and default URLs. Created SingletonObjectCache base class so CSLA objects can be cached on the server-side.

--- a/src/ComplexCommerce/ComplexCommerce.Data.SqlServer/Model/ComplexCommerce.Context.tt
+++ b/src/ComplexCommerce/ComplexCommerce.Data.SqlServer/Model/ComplexCommerce.Context.tt
@@ -429,7 +429,8 @@ void WriteMockDbSet()
 
         public virtual T Find(params object[] keyValues)
         {
-            throw new NotImplementedException();
+            //throw new NotImplementedException();
+			return null;
         }
 
         public virtual ObservableCollection<T> Local
