--- a/src/ComplexCommerce/ComplexCommerce/Views/Shared/_Layout.cshtml
+++ b/src/ComplexCommerce/ComplexCommerce/Views/Shared/_Layout.cshtml
@@ -4,6 +4,14 @@
         <meta charset="utf-8" />
         <title>@ViewBag.Title - My ASP.NET MVC Application</title>
         <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+        @if (ViewBag.MetaKeywords != null)
+        {
+            <meta name="keywords" content="@ViewBag.MetaKeywords" />
+        }
+        @if (ViewBag.MetaDescription != null)
+        {
+            <meta name="description" content="@ViewBag.MetaDescription" />
+        }
         <meta name="viewport" content="width=device-width" />
         @Styles.Render("~/Content/css")
         @Scripts.Render("~/bundles/modernizr")
