--- a/src/ComplexCommerce/ComplexCommerce/Views/Category/Index.cshtml
+++ b/src/ComplexCommerce/ComplexCommerce/Views/Category/Index.cshtml
@@ -13,5 +13,18 @@
     <div class="display-field">
         @Html.DisplayFor(model => model.Description)
     </div>
+
+    @foreach (var product in Model.Products)
+    {
+        <ul id="product-list">
+            <a href="@Url.Action("Index", "Product", new { id = product.ProductXTenantLocaleId })">
+                <img alt="@product.Name" src="@product.ImageUrl" />
+                <div>@product.Name</div>
+                <div>@product.SKU</div>
+                <div>@string.Format("{0:F}", product.Price)</div>
+            </a>
+
+        </ul>
+    }
 </fieldset>
 
