Added Product Csla class to pull up the product details. Changed the action names for product and category from Index to Details.

--- a/src/ComplexCommerce/ComplexCommerce.Data.SqlServer/Model/ComplexCommerce.Context.tt
+++ b/src/ComplexCommerce/ComplexCommerce.Data.SqlServer/Model/ComplexCommerce.Context.tt
@@ -73,7 +73,7 @@ WriteNamespaceBegin( code, namespaceName );
 WriteDbContextInterface( container, code );
 WriteNamespaceEnd( namespaceName );
 
-fileManager.StartNewFile( container.Name + ".cs");
+fileManager.StartNewFile( container.Name + ".Concrete.cs");
 WriteHeader();
 WriteHeaderIncludeData();
 WriteNamespaceBegin( code, namespaceName );
