--- a/src/ComplexCommerce/ComplexCommerce/Views/Shared/_Layout.cshtml
+++ b/src/ComplexCommerce/ComplexCommerce/Views/Shared/_Layout.cshtml
@@ -37,6 +37,7 @@
             </div>
         </header>
         <div id="body">
+            @Html.MvcSiteMap().SiteMapPath()
             @RenderSection("featured", required: false)
             <section class="content-wrapper main-content clear-fix">
                 @RenderBody()
