--- a/src/ComplexCommerce/ComplexCommerce/Content/Site.css
+++ b/src/ComplexCommerce/ComplexCommerce/Content/Site.css
@@ -204,6 +204,13 @@ ul#menu {
             text-decoration: none;
         }
 
+/* breadcrumb trail
+----------------------------------------------------------*/
+.breadcrumb
+{
+	margin-bottom: 10px;
+	margin-left: 7px;
+}
 
 /* page elements
 ----------------------------------------------------------*/
