Changed ProductXTenantLocaleId to CategoryXProductXTenantLocaleId for referencing products to enable putting products on multiple URLs.

--- a/src/ComplexCommerce/ComplexCommerce/Views/Product/Details.cshtml
+++ b/src/ComplexCommerce/ComplexCommerce/Views/Product/Details.cshtml
@@ -36,4 +36,15 @@
         @Html.DisplayFor(model => model.Price)
     </div>
 </fieldset>
+<div>
+    @if (Model.Categories.Count >  0)
+    {
+        <ul>
+        @foreach (var category in Model.Categories)
+        {
+            <li>@Html.MvcSiteMap().SiteMapPath(null, category.PageId.ToString())</li>
+        }
+        </ul>
+    }
+</div>
 
