--- a/src/ComplexCommerce/ComplexCommerce/Views/Shared/_Layout.cshtml
+++ b/src/ComplexCommerce/ComplexCommerce/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                             <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                         </ul>*@
 
-                        @Html.MvcSiteMap().Menu()
+                        @Html.MvcSiteMap().Menu(new { name = "MainMenu" })
                     </nav>
                 </div>
                 <div class="clear-fix"></div>
