--- a/src/ComplexCommerce/ComplexCommerce/Views/Category/Details.cshtml
+++ b/src/ComplexCommerce/ComplexCommerce/Views/Category/Details.cshtml
@@ -18,7 +18,7 @@
     @foreach (var product in Model.Products)
     {
         <ul id="product-list">
-            <a href="@Url.Action("Details", "Product", new { id = product.ProductXTenantLocaleId })">
+            <a href="@Url.Action("Details", "Product", new { id = product.CategoryXProductXTenantLocaleId })">
                 <img alt="@product.Name" src="@product.ImageUrl" />
                 <div>@product.Name</div>
                 <div>@product.SKU</div>
