--- a/src/ComplexCommerce/ComplexCommerce/Views/Shared/_Layout.cshtml
+++ b/src/ComplexCommerce/ComplexCommerce/Views/Shared/_Layout.cshtml
@@ -55,6 +55,12 @@
         <footer>
             <div class="content-wrapper">
                 <div class="float-left">
+                    @if (IsSectionDefined("Languages")) {
+                        @RenderSection("Languages")
+                    }
+                    else {
+                        @Html.PageLanguages(Guid.Parse(Html.MvcSiteMap().SiteMap.CurrentNode.Key), "PageLanguages")
+                    }
                     <p>&copy; @DateTime.Now.Year - My ASP.NET MVC Application</p>
                 </div>
             </div>
