--- a/src/ComplexCommerce/ComplexCommerce/Views/Category/Details.cshtml
+++ b/src/ComplexCommerce/ComplexCommerce/Views/Category/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model ComplexCommerce.Business.Category
+﻿@model ComplexCommerce.Business.Catalog.ICategory
 
 @{
     ViewBag.Title = Model.Title;
